# inventory-erp

./: .gitignore  CMakeLists.txt  HANDOVER.md  TDD_PLAN.md
InventoryERP_Frontend/: app.js  index.html
InventoryERP_Frontend/assets/css/: style.css
InventoryERP_Frontend/components/core/: AppRoot.js  BaseComponent.js
InventoryERP_Frontend/components/dashboard/: DashboardView.js  DashboardViewModel.js
InventoryERP_Frontend/components/items/: ItemDetailView.js  ItemFormView.js  ItemListView.js  ItemMainView.js  ItemsViewModel.js
InventoryERP_Frontend/components/shared/: SideNavigation.js
InventoryERP_Frontend/components/transactions/: TransactionDetailView.js  TransactionFormView.js  TransactionListView.js  TransactionView.js  TransactionViewModel.js
InventoryERP_Frontend/components/users/: UserDetailView.js  UserFormView.js  UserListView.js  UserView.js  UserViewModel.js
InventoryERP_Frontend/components/warehouse/: WarehouseDetailView.js  WarehouseFormView.js  WarehouseListView.js  WarehouseView.js  WarehouseViewModel.js
InventoryERP_Frontend/services/: ApiService.js
include/core/: ConfigManager.h  InventoryManager.h
include/database/: ConnectionGard.hpp  ConnectionGuard.hpp  DatabaseManager.h
include/repository/: DatabaseManager.h
include/web/: RouteConfig.h
include/web/config/: ConfigLoader.hpp
include/web/controller/: BaseController.h  (+2 more)
src/: main.cpp
src/config/: web_config.json
src/database/: DatabaseManager.cpp
src/web/: RouteConfig.cpp
tests/integration/: test_server_health.cpp
tests/unit/: test_inventory_manager.cpp
(+16 files in other folders)
